--- a/ProblemSets/PS5/package.json
+++ b/ProblemSets/PS5/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "ps4",
+  "name": "ps5",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "node-fetch": "^2.7.0",
-    "nodemon": "^3.1.0",
-    "pug": "^3.0.2",
     "redis": "^4.6.13"
   }
 }
